--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -512,6 +512,7 @@ v8_source_set("unittests_sources") {
     sources += [
       "assembler/disasm-arm64-unittest.cc",
       "assembler/turbo-assembler-arm64-unittest.cc",
+      "codegen/arm64/decoder-arm64-inl-unittest.cc",
       "compiler/arm64/instruction-selector-arm64-unittest.cc",
     ]
   } else if (v8_current_cpu == "x86") {
